# Web-Scrapping

./: Cours 1 Jupyter.ipynb  Cours 1.py  Cours 2 Jupyter.ipynb  Cours 3 Jupyter.ipynb  Cours 4 Jupyter.ipynb  Cours 5 Jupyter.ipynb  Cours 6 Jupyter.ipynb  Cours 6.py  Cours 7 Jupyter.ipynb  pyproject.toml  test.json
Cours 8/: Cours 8 Jupyter.ipynb  List of S&P 500 companies - Wikipedia.html
Cours 8/List of S&P 500 companies - Wikipedia_files/: load(1).php
