[project]
name = "web-scrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.15.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
]
